--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "nodemailer": "^6.9.8",
     "nodemon": "^3.0.3"
   },
-  "name": "fff",
+  "name": "al-deraa",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
